--- a/package.json
+++ b/package.json
@@ -18,10 +18,13 @@
     "Lluis Agusti <hi@llu.lu>"
   ],
   "dependencies": {
+    "@auth/core": "^0.7.1",
+    "moment": "^2.29.4",
     "next": "latest",
     "next-auth": "latest",
     "nodemailer": "^6",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
