--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   ],
   "dependencies": {
     "@auth/core": "^0.7.1",
+    "bootstrap": "^5.2.3",
     "moment": "^2.29.4",
     "next": "latest",
     "next-auth": "latest",
